fix(style): Set overflow-x to hidden

--- a/src/components/Main/PostCards.scss
+++ b/src/components/Main/PostCards.scss
@@ -1,5 +1,6 @@
 #main__post_cards {
   display: flex;
+  overflow-x: hidden;
   @media screen and (max-width: 1320px) {
     flex-direction: column;
   }
